CSS bugfix, removed idPrefix, aligned labels

--- a/assets/css/flows4apex.modeler.css
+++ b/assets/css/flows4apex.modeler.css
@@ -1,4 +1,4 @@
-.FLOWS {
+.flows4apex-modeler {
   --color-flows-button-green: #52B415;
 }
 /**
